--- a/Front-end/wwwroot/css/app.css
+++ b/Front-end/wwwroot/css/app.css
@@ -262,9 +262,50 @@ code {
     color: var(--green-ufersa);
 }
 
-.compromisso{
+.compromise{
     display: flex; 
     align-items: center; 
     font-size: 0.75rem; 
     padding-right: 15px;
+}
+
+.service{
+    padding-right: 15px; 
+    position: relative;
+    cursor: pointer;
+}
+
+.service:hover .background-service{
+    filter: none;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.background-service{
+    filter: grayscale(100%) contrast(100%);
+}
+
+.background-service-active{
+    filter: none;
+}
+
+.background-service:hover{
+    filter: none;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.service-people{
+    position: absolute;
+    bottom: 20px;
+    left: 45.6%;
+    transform: translateX(-50%);
+    width: 82%;
+    padding: 2px;
+    background-color: white;
+    margin-right: 4px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
