--- a/Front-end/Pages/Inicio.razor
+++ b/Front-end/Pages/Inicio.razor
@@ -62,7 +62,7 @@
 
                     <div>
 
-                        <h1 style="padding: 30px 20px;" class="px24 weight-700">Serviços</h1>
+                        <h1 style="padding: 20px 20px;" class="px24 weight-700">Serviços</h1>
 
                         <div style="display: flex;  width: 42.5rem; overflow: auto; scrollbar-width: none;">
                             @for(int i = 1; i < 5; i++){
@@ -79,6 +79,25 @@
                             }
                         </div>
 
+                    </div>
+
+                    <div style="width: 42.5rem;">
+                        <h1 style="padding: 20px 20px;" class="px24 weight-700">Informações</h1>
+
+                        <div style="display: flex; align-items: flex-start;">
+                            <img src="..\\css\\images\\info-ex.svg">
+
+                            <div style="padding: 5px 5px 0px 10px;">
+                                <h2 class="weight-600" style="font-size: 1.375rem; margin: 0; padding-bottom: 5px;">Lívia Beatriz Maia de Lima</h2>
+                                <span class="weight-500" style="color: var(--black-gray);">Psicóloga - CRP 17/0000</span>
+                                <p class="weight-500" style="font-size: 1.125rem; color: var(--black-gray); padding-top: 15px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry indut...</p>
+                            </div>
+
+                            <div style="padding: 5px 0px; display: flex;">
+                                <img src="..\css\images\info-agendar.svg">
+                                <img style="padding-left: 20px;" src="..\css\images\info-relatar.svg">
+                            </div>
+                        </div>
                     </div>
 
                     
