--- a/Front-end/Pages/Entrar.razor
+++ b/Front-end/Pages/Entrar.razor
@@ -1,6 +1,7 @@
 @page "/entrar"
 @using System.ComponentModel.DataAnnotations
 @inject NavigationManager Navigation
+@inject DiscenteService DiscenteService
 
 <PageTitle>Entrar</PageTitle>
 
@@ -13,9 +14,10 @@
     
         <p class="paragraph-size weight-500">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
     
-        <EditForm Model="@user" OnValidSubmit="@HandleValidSubmit">
+        <EditForm Model="@user" OnValidSubmit="@Login">
         <DataAnnotationsValidator />
     
+
             <ValidationMessage For="@(() => user.Email)" />
             <div class="mb-3 ">
                 <InputText id="email" class="custom-input form-control border-radius-10" @bind-Value="user.Email" placeholder="Email"/>
@@ -28,9 +30,16 @@
                     <img style="height: 1.5rem; width: 1.5rem;" src="@(isPasswordVisible ? "..\\css\\images\\eye-on.svg" : "..\\css\\images\\eye-off.svg")" alt="@(isPasswordVisible ? "Esconder Senha" : "Mostrar Senha")" id="eyeIcon" />
                 </span>
             </div>
+
     
             <a href="/recuperar-senha" class="weight-700 paragraph-size underline">Esqueceu sua senha?</a>
     
+            @if (!string.IsNullOrEmpty(errorMessage))
+            {
+                <div class="text-danger py-3">
+                    @errorMessage
+                </div>
+            }
             <div class="d-grid gap-2 py-5">
                 <button type="submit" class="btn btn-primary weight-700 px24 border-radius-30" style="height: 4rem;">Entrar</button>
             </div>
@@ -66,11 +75,28 @@
 
     private User user = new User();
     private bool submitted = false;
+    private string errorMessage;
 
-    private void HandleValidSubmit()
-    {
+    private async Task Login()
+    {   
         submitted = true;
-        Navigation.NavigateTo("/inicio");
+
+        var loginModel = new DiscenteLoginModel
+        {
+            Email = user.Email,
+            Senha = user.Password
+        };
+        
+        var result = await DiscenteService.LoginDiscente(loginModel);
+
+        if (result.IsSuccessStatusCode)
+            {
+                Navigation.NavigateTo("/inicio");
+            }
+            else
+            {
+                errorMessage = "Email e/ou senha inválidos";
+            }
     }
 
     private bool isPasswordVisible = false;
