<feat>: calendário na tela início

--- a/Front-end/wwwroot/css/app.css
+++ b/Front-end/wwwroot/css/app.css
@@ -3,6 +3,7 @@
 :root{
     --black-color: #1E1E1E;
     --blue-ufersa: #243E64;
+    --light-blue: #ABC8E2;
     --green-ufersa: #99CC33;
     --white: #FAF9F6;
     --border-color: #000000;
