--- a/Front-end/Pages/Inicio.razor
+++ b/Front-end/Pages/Inicio.razor
@@ -29,7 +29,7 @@
 
                     </div>
 
-                    <div>
+                    <div style="width: 305px;">
                         <h1 style="padding-left: 20px;" class="px24 weight-700">Compromissos</h1>
 
                         @for(int i = 0; i < 4; i++){
@@ -58,48 +58,44 @@
 
                 </div>
 
-                <div>
+                <div style="display: flex; justify-content: space-between; width: 100%; align-items: center;">
 
                     <div>
-
-                        <h1 style="padding: 20px 20px;" class="px24 weight-700">Serviços</h1>
-
-                        <div style="display: flex;  width: 42.5rem; overflow: auto; scrollbar-width: none;">
-                            @for(int i = 1; i < 5; i++){
-                                <div class="service">
-                                    <img class="@(i == 1 ? "background-service-active" : "background-service")" src="..\css\images\img-servico@(i).svg">
-                                    <div class="service-people">
-                                        <div style="padding-left: 10px;">
-                                            <h3 class="weight-700" style="font-size: 0.875rem; color: var(--blue-ufersa); margin: 0px; padding-bottom: 5px;">Lívia Beatriz</h3>
-                                            <p class="weight-500" style="font-size: 0.5rem; color: var(--blue-ufersa); margin: 0px;">Psicóloga</p>
+                        <div>
+                            <h1 style="padding: 20px 20px;" class="px24 weight-700">Serviços</h1>
+                            <div style="display: flex;  width: 42.5rem; overflow: auto; scrollbar-width: none;">
+                                @for(int i = 1; i < 5; i++){
+                                    <div class="service">
+                                        <img class="@(i == 1 ? "background-service-active" : "background-service")" src="..\css\images\img-servico@(i).svg">
+                                        <div class="service-people">
+                                            <div style="padding-left: 10px;">
+                                                <h3 class="weight-700" style="font-size: 0.875rem; color: var(--blue-ufersa); margin: 0px; padding-bottom: 5px;">Lívia Beatriz</h3>
+                                                <p class="weight-500" style="font-size: 0.5rem; color: var(--blue-ufersa); margin: 0px;">Psicóloga</p>
+                                            </div>
+                                            <img src="..\css\images\servico-ex.svg">
                                         </div>
-                                        <img src="..\\css\\images\\servico-ex.svg">
                                     </div>
+                                }
+                            </div>
+                        </div>
+                        <div style="width: 42.5rem;">
+                            <h1 style="padding: 20px 20px;" class="px24 weight-700">Informações</h1>
+                            <div style="display: flex; align-items: flex-start;">
+                                <img src="..\css\images\info-ex.svg">
+                                <div style="padding: 5px 5px 0px 10px;">
+                                    <h2 class="weight-600" style="font-size: 1.375rem; margin: 0; padding-bottom: 5px;">Lívia Beatriz Maia de Lima</h2>
+                                    <span class="weight-500" style="color: var(--black-gray);">Psicóloga - CRP 17/0000</span>
+                                    <p class="weight-500" style="font-size: 1.125rem; color: var(--black-gray); padding-top: 15px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry indut...</p>
                                 </div>
-                            }
-                        </div>
-
-                    </div>
-
-                    <div style="width: 42.5rem;">
-                        <h1 style="padding: 20px 20px;" class="px24 weight-700">Informações</h1>
-
-                        <div style="display: flex; align-items: flex-start;">
-                            <img src="..\\css\\images\\info-ex.svg">
-
-                            <div style="padding: 5px 5px 0px 10px;">
-                                <h2 class="weight-600" style="font-size: 1.375rem; margin: 0; padding-bottom: 5px;">Lívia Beatriz Maia de Lima</h2>
-                                <span class="weight-500" style="color: var(--black-gray);">Psicóloga - CRP 17/0000</span>
-                                <p class="weight-500" style="font-size: 1.125rem; color: var(--black-gray); padding-top: 15px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry indut...</p>
-                            </div>
-
-                            <div style="padding: 5px 0px; display: flex;">
-                                <img src="..\css\images\info-agendar.svg">
-                                <img style="padding-left: 20px;" src="..\css\images\info-relatar.svg">
+                                <div style="padding: 5px 0px; display: flex;">
+                                    <img src="..\css\images\info-agendar.svg">
+                                    <img style="padding-left: 20px;" src="..\css\images\info-relatar.svg">
+                                </div>
                             </div>
                         </div>
                     </div>
 
+                    <Calendario />
                     
                 </div>
 
