--- a/Front-end/_Imports.razor
+++ b/Front-end/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.JSInterop
 @using Front_end
 @using Front_end.Layout
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
