--- a/Front-end/Layout/NavMenu.razor
+++ b/Front-end/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div style="background-color: var(--blue-ufersa); width: 288px;">
+﻿<div style="background-color: var(--blue-ufersa); width: 18rem; height: auto; position: relative;">
     <div style="padding-left: 55px;" class="pt-5 pb-4">
         <img src="..\\css\\images\\img-ilustrativa.svg" alt="">
 
@@ -6,7 +6,7 @@
         <h1 class="weight-700" style="font-size: 1.375rem; color: white; text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);">Eriky <br> Veloso</h1>
     </div>
     
-    <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+    <div class="@NavMenuCssClass nav-scrollable" style="height: auto;" @onclick="ToggleNavMenu">
         <nav class="flex-column">
             <span class="weight-500" style="font-size: 0.75rem; color: var(--white); padding-left: 55px;">Menu</span>
             <div class="nav-item px-3">
@@ -91,7 +91,7 @@
         </nav>
     </div>
 
-    <div style="width: 100%; text-align: center; padding-bottom: 70px;">
+    <div style="width: 100%; text-align: center; position: absolute; bottom: 70px; left: 0;">
         <img src="..\css\images\logo-ufersa.svg" alt="Logo UFERSA">
     </div>
 </div>
