--- a/Front-end/Pages/Inicio.razor
+++ b/Front-end/Pages/Inicio.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>Início</PageTitle>
 
-<div class="page" style="background-color: var(--blue-ufersa);">
+<div class="page" style="background-color: var(--blue-ufersa); height: auto;">
         <NavMenu />
 
         <div style="padding-top: 29px; border-radius: 15px 0px 0px 15px; width: 100%; background-color: white;">
@@ -31,7 +31,7 @@
 
                     </div>
 
-                    <div style="width: 305px;">
+                    <div style="width: 19.063rem;">
                         <h1 style="padding-left: 20px;" class="px24 weight-700">Compromissos</h1>
 
                         @for(int i = 0; i < 4; i++){
