<refactor>: aspectos visuais ajustados

--- a/Front-end/Pages/Cadastrar.razor
+++ b/Front-end/Pages/Cadastrar.razor
@@ -189,6 +189,7 @@
             Senha = user.Password,
             Matricula = int.TryParse(infosUser.Matricula, out var matricula) ? matricula : 0,
             Cpf = infosUser.Cpf,
+            Telefone = 6657765,
             Curso = "Curso"
         };
 
