--- a/Front-end/Pages/Inicio.razor
+++ b/Front-end/Pages/Inicio.razor
@@ -10,7 +10,7 @@
 
         <div style="padding-top: 29px; border-radius: 15px 0px 0px 15px; width: 100%; background-color: white;">
             <Header />
-            <main class="page" style="padding-left: 6.188rem; padding-right: 6.188rem; padding-top: 20px; justify-content: space-between; display: flex; flex-wrap: wrap;">
+            <main class="page" style="padding-left: 4rem; padding-right: 3rem; padding-top: 20px; justify-content: space-between; display: flex; flex-wrap: wrap;">
 
                 <div style="display: flex; justify-content: space-between; width: 100%;">
 
@@ -69,13 +69,13 @@
                             <div id="scroll-container" style="display: flex;  width: 42.5rem; overflow: auto; scrollbar-width: none; user-select: none;">
                                 @for(int i = 1; i < 5; i++){
                                     <div class="service">
-                                        <img class="@(i == 1 ? "background-service-active" : "background-service") no-select" src="..\css\images\img-servico@(i).svg">
+                                        <img class="@(i == 1 ? "background-service-active" : "background-service") no-select" style="width: 11.75rem; height: 11.75rem;" src="..\css\images\img-servico@(i).svg">
                                         <div class="service-people no-select">
                                             <div style="padding-left: 10px;">
                                                 <h3 class="weight-700" style="font-size: 0.875rem; color: var(--blue-ufersa); margin: 0px; padding-bottom: 5px;">Lívia Beatriz</h3>
                                                 <p class="weight-500" style="font-size: 0.5rem; color: var(--blue-ufersa); margin: 0px;">Psicóloga</p>
                                             </div>
-                                            <img src="..\css\images\servico-ex.svg">
+                                            <img style="width: 3.5rem; height: 3.5rem;" src="..\css\images\servico-ex.svg">
                                         </div>
                                     </div>
                                 }
@@ -84,7 +84,7 @@
                         <div style="width: 42.5rem;">
                             <h1 style="padding: 20px 20px;" class="px24 weight-700">Informações</h1>
                             <div style="display: flex; align-items: flex-start;">
-                                <img src="..\css\images\info-ex.svg">
+                                <img style="width: 5.5rem; height: 5.5rem;" src="..\css\images\info-ex.svg">
                                 <div style="padding: 5px 5px 0px 10px;">
                                     <h2 class="weight-600" style="font-size: 1.375rem; margin: 0; padding-bottom: 5px;">Lívia Beatriz Maia de Lima</h2>
                                     <span class="weight-500" style="color: var(--black-gray);">Psicóloga - CRP 17/0000</span>
