<feat>: layout inicial da tela de serviços

--- a/Front-end/Layout/NavMenu.razor
+++ b/Front-end/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div style="background-color: var(--blue-ufersa); width: 18rem; height: auto; position: relative;">
+﻿<div style="background-color: var(--blue-ufersa); width: 22rem; height: auto; position: relative;">
     <div style="padding-left: 55px;" class="pt-5 pb-4">
         <img src="..\\css\\images\\img-ilustrativa.svg" alt="">
 
@@ -38,7 +38,7 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/">
+                <NavLink class="nav-link" href="/servicos">
                     <div class="vertical-bar"></div>
                     <div style="align-items: center; display: flex;" class="px-4">
                         <svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -48,7 +48,7 @@
                             <path d="M16 3.13C16.8604 3.3503 17.623 3.8507 18.1676 4.55231C18.7122 5.25392 19.0078 6.11683 19.0078 7.005C19.0078 7.89317 18.7122 8.75608 18.1676 9.45769C17.623 10.1593 16.8604 10.6597 16 10.88" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                     </div>
-                    Serviço
+                    Serviços
                 </NavLink>
             </div>
             <div class="nav-item px-3">
