--- a/Front-end/Layout/NavMenu.razor
+++ b/Front-end/Layout/NavMenu.razor
@@ -27,7 +27,7 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/">
+                <NavLink class="nav-link" href="/agenda">
                     <div class="vertical-bar"></div>
                     <div style="align-items: center; display: flex;" class="px-4">
                         <svg class="icon" width="1.5rem" height="1.5rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
