<fix>: redirecionamento correto

--- a/Front-end/Pages/Inicio.razor
+++ b/Front-end/Pages/Inicio.razor
@@ -24,7 +24,7 @@
                             <p class="paragraph-size weight-500" style="color: var(--white); width: 90%;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum.</p>
 
                             <div class="d-grid gap-2 py-2">
-                                <a href="/inicio" class="btn btn-secondary weight-700 border-radius-30 paragraph-size" style="display: flex; align-items: center; justify-content: center; height: 3rem; align-items: center; width: 50%">Agendar</a>
+                                <a href="/agenda" class="btn btn-secondary weight-700 border-radius-30 paragraph-size" style="display: flex; align-items: center; justify-content: center; height: 3rem; align-items: center; width: 50%">Agendar</a>
                             </div>
                         </div>
 
