<feat>: layout inicial da tela de ajustes

--- a/Front-end/Layout/NavMenu.razor
+++ b/Front-end/Layout/NavMenu.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager Navigation
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
-<div style="background-color: var(--blue-ufersa); width: 22rem; height: auto; position: relative;">
+<div style="background-color: var(--blue-ufersa); width: 22rem; height: auto; min-height: 100vh; position: relative;">
     <div style="padding-left: 55px;" class="pt-5 pb-4">
         <img src="..\\css\\images\\img-ilustrativa.svg" alt="">
 
@@ -57,7 +57,7 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/">
+                <NavLink class="nav-link" href="/ajustes">
                     <div class="vertical-bar"></div>
                     <div style="align-items: center; display: flex;" class="px-4">
                         <svg class="icon" width="1.5rem" height="1.5rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
