--- a/Front-end/wwwroot/css/app.css
+++ b/Front-end/wwwroot/css/app.css
@@ -333,3 +333,42 @@ code {
     border-radius: 10px;
     margin: 20px 0px;
 }
+
+#curso {
+    appearance: none; /* Remove a seta nativa */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: url('..\\css\\images\\seta-select.svg') no-repeat right 1rem center;
+}
+
+.edit-fields{
+    border-bottom: 1px solid var(--black-gray); 
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px 40px 0px 10px;
+}
+
+.upload-button{
+    display: flex;
+    flex-wrap: wrap;
+    height: 10.25rem;
+    width: 32rem;
+    border: 2px solid var(--blue-ufersa);
+    border-radius: 10px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.input-with-icon {
+    position: relative;
+    width: fit-content;
+}
+
+.input-icon {
+    position: absolute;
+    left: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    pointer-events: none;
+}
