<fix>: redirecionamento após o cadastro para login

--- a/Front-end/Pages/Cadastrar.razor
+++ b/Front-end/Pages/Cadastrar.razor
@@ -198,7 +198,7 @@
         if (result.IsSuccessStatusCode)
             {
                 FirstAcceptAndRegister = true;
-                Navigation.NavigateTo("/inicio");
+                Navigation.NavigateTo("/entrar");
             }
             else
             {
