--- a/Front-end/Pages/Ajustes.razor
+++ b/Front-end/Pages/Ajustes.razor
@@ -5,7 +5,7 @@
 @inject DiscenteService DiscenteService
 @using System.Text.RegularExpressions
 
-<PageTitle>Agenda</PageTitle>
+<PageTitle>Ajustes</PageTitle>
 
 <div class="page" style="background-color: var(--blue-ufersa); height: auto;">
     <NavMenu />
@@ -85,15 +85,19 @@
                                 </div>
                         </div>
                         <div class="edit-fields">
-                                <span class="paragraph-size px-2 weight-500" style="width: 12rem">CPF / Matrícula <span style="color: #BA3838">*</span></span>
+                                <span class="paragraph-size px-2 weight-500" style="width: 12rem">Telefone</span>
+
                                 <div class="mb-3">
-                                    <InputText id="cpf" class="custom-input form-control border-radius-10 my-1" style="width: 23rem;" @bind-Value="infosUser.Cpf" @oninput="FormatarCPF" maxlength="14" />
-                                    <ValidationMessage For="@(() => infosUser.Cpf)" />
+                                    <InputText id="ddi" class="custom-input form-control border-radius-10 my-1" style="width: 5em; text-align: center;" @bind-Value="infosUser.telefoneModel.DDI" maxlength="3" oninput="formatDDI(this)"/>
                                 </div>
                                 <div class="mb-3">
-                                    <InputText id="matricula" class="custom-input form-control border-radius-10 my-1" style="width: 23rem; margin-left: 1.5rem;" @bind-Value="infosUser.Matricula" maxlength="10"/>
-                                <ValidationMessage For="@(() => infosUser.Matricula)" style="margin-left: 1.5rem;" />
+                                    <InputText id="ddd" class="custom-input form-control border-radius-10 my-1" style="width: 5rem; text-align: center; margin-left: 1.5rem;" @bind-Value="infosUser.telefoneModel.DDD" maxlength="4" oninput="formatDDD(this)" onkeydown="handleKeyDownDDD(event, this)"/>
                                 </div>
+                                <div class="mb-3">
+                                    <InputText id="numero" class="custom-input form-control border-radius-10 my-1" style="width: 34.5rem; margin-left: 1.5rem;" @bind-Value="infosUser.telefoneModel.Numero" maxlength="10" oninput="formatNumero(this)"/>
+                                </div>
+                                
+                                <ValidationMessage For="@(() => infosUser.telefoneModel)" />
                         </div>
                         <div class="edit-fields">
                                 <span class="paragraph-size px-2 weight-500" style="width: 12rem">Curso</span>
@@ -127,6 +131,13 @@
 
                     <EditForm Model="@contaUser">
                     <DataAnnotationsValidator />
+                        <div class="edit-fields">
+                            <span class="paragraph-size px-2 weight-500" style="width: 12rem">Matrícula <span style="color: #BA3838">*</span></span>
+                            <div class="mb-3">
+                                <InputText id="matricula" class="custom-input form-control border-radius-10 my-1" style="width: 47.5rem; padding-left: 3.25rem;" @bind-Value="contaUser.Matricula" maxlength="10"/>
+                            </div>
+                                <ValidationMessage For="@(() => contaUser.Matricula)" />
+                        </div>
                         <div class="edit-fields">
                                 <span class="paragraph-size px-2 weight-500" style="width: 12rem">Email <span style="color: #BA3838">*</span></span>
                                 <div class="mb-3 input-with-icon">
@@ -177,12 +188,18 @@
 @code{
     public class Conta
     {
+        [Required(ErrorMessage = "O campo Email é obrigatório.")]
         [RegularExpression(@"^[a-zA-Z0-9._%+-]+@alunos\.ufersa\.edu\.br$", ErrorMessage = "O Email deve ser do domínio @alunos.ufersa.edu.br")]
         public string Email { get; set; }
 
+        [Required(ErrorMessage = "O campo Senha é obrigatório.")]
         [MinLength(8, ErrorMessage = "A senha deve ter no mínimo 8 caracteres.")]
         [RegularExpression(@"^(?=.*[0-9])(?=.*[!@#$%^&*(),.?{}|<>+=\-\\]).*$", ErrorMessage = "A senha deve conter pelo menos um número e um caractere especial.")]
         public string Senha { get; set; }
+
+        [Required(ErrorMessage = "O campo Matrícula é obrigatório.")]
+        [RegularExpression(@"^\d{10}$", ErrorMessage = "A Matrícula deve ter exatamente 10 dígitos.")]
+        public string Matricula { get; set; }
     }
     public class InfosUser
     {
@@ -191,42 +208,21 @@
 
         public string Sobrenome { get; set; }
 
-        [RegularExpression(@"^\d{10}$", ErrorMessage = "A Matrícula deve ter exatamente 10 dígitos.")]
-        public string Matricula { get; set; }
-
-        [RegularExpression(@"^(\d{3}\.\d{3}\.\d{3}-\d{2}|\d{11})$", ErrorMessage = "O formato deve ser 000.000.000-00.")]
-        public string Cpf { get; set; }
-
         public string Curso { get; set; }
+
+        public TelefoneModel telefoneModel {get; set;} = new TelefoneModel();
     }
 
-    private void FormatarCPF(ChangeEventArgs e)
+    public class TelefoneModel
     {
-        string input = e.Value?.ToString() ?? string.Empty;
+        [RegularExpression(@"^\+\d{1,3}$", ErrorMessage = "O DDI deve iniciar com '+' e ter até 3 dígitos.")]
+        public string DDI { get; set; } = "+55";
 
-        string cpf = Regex.Replace(input, @"\D", "");
+        [RegularExpression(@"^\(\d{2}\)$", ErrorMessage = "O DDD deve estar no formato '(XX)' com 2 dígitos.")]
+        public string DDD { get; set; } = "(84)";
 
-        // Limita a 11 caracteres
-        if (cpf.Length > 11)
-        {
-            cpf = cpf.Substring(0, 11);
-        }
-
-        // Aplica a formatação
-        if (cpf.Length > 9)
-        {
-            cpf = Regex.Replace(cpf, @"(\d{3})(\d{3})(\d{3})(\d{2})", "$1.$2.$3-$4");
-        }
-        else if (cpf.Length > 5)
-        {
-            cpf = Regex.Replace(cpf, @"(\d{3})(\d{3})(\d{2})", "$1.$2-$3");
-        }
-        else if (cpf.Length > 2)
-        {
-            cpf = Regex.Replace(cpf, @"(\d{3})(\d+)", "$1.$2");
-        }
-
-        infosUser.Cpf = cpf;
+        [RegularExpression(@"^\d{4,5}-\d{4}$", ErrorMessage = "O número deve estar no formato 'XXXXX-XXXX' ou 'XXXX-XXXX'.")]
+        public string Numero { get; set; }
     }
 
     private Conta contaUser = new Conta();
